# NetworkSandboxEngine

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements.txt
backend/nse/: __init__.py  __main__.py  cli.py  main.py
backend/nse/api/: routes.py  websocket.py
backend/nse/core/: __init__.py  mock_listener.py  netns_controller.py  pipeline.py  rule_engine.py  scapy_injector.py  trace_harvester.py
backend/nse/models/: test_request.py  trace_event.py
backend/tests/: test_core.py  test_placeholder.py  test_stateful.py  test_suite.yaml
docs/: ARCHITECTURE.md
frontend/: vite.config.js
frontend/src/: App.svelte
frontend/src/api/: client.js
frontend/src/lib/: DocsView.svelte  RuleEditor.svelte
frontend/src/stores/: testStore.js
gui/: __init__.py  rootd.py  server.py
gui/api/: __init__.py  deps.py  rootd_client.py  routes.py  websocket.py
gui/daemon/: __init__.py  mock_listener.py  trace_harvester.py
gui/gui_svelte/: package-lock.json  package.json
gui/gui_svelte/src/: App.svelte  app.css
gui/gui_svelte/src/api/: client.js
gui/gui_svelte/src/lib/: DocsView.svelte  PacketCrafter.svelte  Pipeline.svelte
gui/gui_svelte/src/stores/: testStore.js
nse/: __init__.py
nse/cli/: runner.py
nse/core/: __init__.py  netns_controller.py  pipeline.py  rule_engine.py  scapy_injector.py  sniffer.py  utils.py
nse/models/: base.py  test_request.py  trace_event.py
release/: Dockerfile  SHA256SUMS  SHA256SUMS.asc  network_sandbox_engine-1.0.0-py3-none-any.whl  network_sandbox_engine-1.1.0-py3-none-any.whl  nse-1.0.0-py3-none-any.whl
scripts/: dev-setup.sh  nse.service  start-daemon.sh
tests/: test_netns.py
