[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nse"
version = "0.1.0"
description = "Network Sandbox Engine — deterministic nftables rule tester"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "scapy>=2.5.0",
    "pydantic>=2.0.0",
    "websockets>=12.0",
]

[project.scripts]
nse = "nse.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nse*"]
